public/css/styles.css
/* ---------- GERAL ---------- */
body {
    background-color: #e4e4e4;
    overflow-x: hidden;
}

/* ---------- NAVBAR ---------- */

.navbar {
    background-color: #1e1e1e;
    width: 100%;
    padding: 1rem 1rem;
}

@media (min-width: 992px) {
    .navbar {
        width: 250px;
        height: 100vh;
        position: fixed;
        top: 0;
        left: 0;
        padding-top: 20px;
        flex-direction: row;
        align-items: flex-start;
    }

    .main-content {
        margin-left: 250px;
    }
}

.navbar .navbar-brand {
    font-size: 1.5em;
    border-bottom: 4px solid #464646;
    color: rgba(72, 255, 62, 0.641);
}

.navbar .navbar-nav {
    flex-direction: column;
    align-items: flex-start;
}

.navbar .nav-link {
    padding: 10px 15px;
    font-size: 1.2em;
    color: white;
}

.navbar .nav-item + .nav-item {
    margin-top: 10px;
}

/* ---------- DARK MODE BUTTON ---------- */
#darkModeToggle {
    margin-top: 1rem;
}

/* ---------- PROFILE IMAGE ---------- */
.profile-icon {
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

/* ---------- SEARCH ---------- */
.search-input {
    max-width: 75%;
    width: 100%;
}

.search-input input {
    outline: 1px solid transparent;
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
                rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
}

.search-input input:focus {
    box-shadow: none;
    outline: 2px solid rgba(83, 249, 74, 0.501);
}

.search-input button {
    background-color: white;
    outline: 1px solid transparent;
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
                rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
}

.search-input button:hover {
    background-color: rgb(46, 132, 42);
    color: white;
}

.search-input button:focus {
    border-color: rgba(83, 249, 74, 0.1);
}

/* ---------- GENRES ---------- */
.genres-container {
    width: 75%;
    overflow-x: auto;
    white-space: nowrap;
    margin-left: 21px;
    padding-bottom: 0.8rem;
}

.genres-container::-webkit-scrollbar {
    height: 8px;
}

.genres-container::-webkit-scrollbar-track {
    background: #f0f0f0;
    border-radius: 10px;
}

.genres-container::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 10px;
}

.genres-container::-webkit-scrollbar-thumb:hover {
    background: #555;
}

.genres-container form {
    flex-wrap: nowrap !important;
}

.genres-container .genre-item {
    display: inline-block;
}

/* ---------- FAVORITES ---------- */
.favorite-button {
    outline: none;
    border: none;
    font-size: 1.2em;
    padding-left: 3px;
    padding-right: 3px;
    transition: 0.5s ease-out;
}

.favorite-button:hover {
    transform: scale(1.5);
    transition: 0.5s ease;
}

/* ---------- CARD EFFECT ---------- */
.card_effect {
    transform: scale(1);
    transition: 0.5s ease-out;
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
                rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
}

.card_effect:hover {
    transform: scale(1.1);
    transition: 0.5s;
    box-shadow: 0 0 15px rgba(47, 132, 42, 0.586);
    cursor: pointer;
}

/* ---------- PAGINATION ---------- */
.page-link {
    color: #198754;
}

.page-link:hover {
    color: #146c43;
}

.page-item.active .page-link {
    background-color: #198754;
    border-color: #198754;
    color: white;
}

/* ---------- FORM CHECKBOX ---------- */
.form-check-input {
    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
                rgba(0, 0, 0, 0.24) 0px 1px 2px;
}

/* ---------- ANIMATIONS ---------- */
.zoom-hover {
    transition: transform 0.3s ease;
}

.zoom-hover:hover {
    color: rgba(83, 249, 74, 0.501);
    transform: scale(1.25);
}

.underline-hover {
    position: relative;
    color: white;
    letter-spacing: 1px;
    font-family: var(--roboto);
    padding-bottom: 2px;
    width: auto;
}

.underline-hover::before {
    content: '';
    position: absolute;
    top: 100%;
    left: 0;
    width: 0;
    height: 2px;
    background: rgba(83, 249, 74, 0.501);
    transition: 0.3s;
}

.underline-hover:hover::before {
    width: 100%;
}

